--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "server": "cd server && npm run dev",
     "client": "cd client && npm start",
     "build": "cd client && npm run build",
+    "build:production": "cd server && npm ci --only=production",
+    "start": "cd server && npm start",
     "install-deps": "npm install && cd server && npm install && cd ../client && npm install"
   },
   "keywords": ["space", "satellites", "missions", "astronomy", "tracking"],
@@ -15,5 +17,9 @@
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   }
 }
