--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: orbitiq-backend
     env: node
     plan: starter
-    buildCommand: npm run build:production
-    startCommand: npm start
+    buildCommand: cd server && npm ci --only=production
+    startCommand: cd server && npm start
     healthCheckPath: /api/health
     envVars:
       - key: NODE_ENV
